--- a/assets/app.css
+++ b/assets/app.css
@@ -18,3 +18,25 @@ input,select{
     @apply dark:bg-gray-700;
 }
 
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+    scrollbar-width: auto;
+    scrollbar-color: #864a96 #ffffff;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+    width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+    background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #864a96;
+    border-radius: 18px;
+    border: 1px solid #ffffff;
+}
